tests/errors/tc_stmt_return_missing.lx
@module "main"

const foo -> fn () int {
    // missing return
}

pub const main -> fn () int {
    return 0;
}
